<resources>
    <string name="app_name">Nokody</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot your password ? </string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="create_account">Creat a new account</string>
    <string name="invalid_credentials">Error logging in. Please check your info and try again</string>
    <string name="error_field_required">This field cannot be empty.</string>
    <string name="error_invalid_id">Invalid Id</string>
    <string name="error_invalid_password">Password must be 8 characters length at least</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="no_data">No transactions history found</string>
    <string name="req_payment_error">Couldnot proceed with your request please try again.</string>
    <string name="enter_purchase_amount">Enter purchase amount</string>
    <string name="amount">Amount</string>
    <string name="enter_passport_number">Enter passport number</string>
    <string name="or">OR</string>
    <string name="next">NEXT</string>
    <string name="enter_pin_code">Enter your pin code</string>
    <string name="make_payment">Make Payment</string>
    <string name="error">Error</string>
    <string name="payment">Payment</string>
    <string name="invalid_pin_code">Invalid Pin Code</string>
    <string name="reader">Reader</string>
    <string name="transfer">Transfer</string>
    <string name="history">Transactions History</string>
    <string name="reload">Reload</string>
</resources>
