<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-16dp"
        android:paddingStart="8dp"
        android:text="@string/amount"
        android:textColor="@color/textSecondary" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_transparent"
        android:drawablePadding="8dp"
        android:gravity="left"
        android:hint="@string/enter_purchase_amount"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPassport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_transparent"
            android:drawablePadding="8dp"
            android:gravity="left"
            android:hint="@string/enter_passport_number"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/textSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="bottom"
            android:textAlignment="center"
            android:padding="4dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/scan"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_scan" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvValidateError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/invalid_credentials"
        android:textColor="@color/red"
        android:visibility="gone" />

    <Button
        android:id="@+id/validateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_accent"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/next"
        android:textColor="@color/white" />

</LinearLayout>

