<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/payment_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-8dp"
        android:gravity="center"
        android:text="@string/amount"
        android:textColor="@color/textSecondary"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            tools:text="1850" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="SAR"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />

    </LinearLayout>

    <com.infideap.blockedittext.BlockEditText
        android:id="@+id/binEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bet_defaultLength="1"
        app:bet_editTextBackground="@drawable/selector_edittext_round_border"
        app:bet_hint="@string/enter_pin_code"
        app:bet_hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:bet_inputType="Integer"
        app:bet_numberOfBlock="4" />

    <TextView
        android:id="@+id/pinError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/invalid_pin_code"
        android:textColor="@color/red"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_accent"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/make_payment"
        android:textColor="@color/white" />

</LinearLayout>

